# server_fns

./: .gitignore  Cargo.toml  README.md  TODO.md  flake.nix  playground.txt
examples/actix_example/: Cargo.toml
examples/actix_example/src/: main.rs
examples/axum/: Cargo.toml  README.md
examples/axum/.cargo/: config.toml
examples/axum/src/: app.rs  fileserv.rs  layer.rs  lib.rs  main.rs
examples/axum_example/: Cargo.toml
examples/axum_example/src/: main.rs
server_fn/: Cargo.toml
server_fn/src/: client.rs  error.rs  lib.rs
server_fn/src/codec/: cbor.rs  json.rs  mod.rs  multipart.rs  rkyv.rs  stream.rs  url.rs
server_fn/src/request/: actix.rs  axum.rs  browser.rs  http.rs  mod.rs  reqwest.rs
server_fn/src/response/: actix.rs  browser.rs  http.rs  mod.rs  reqwest.rs
server_fn_macro/: Cargo.toml
server_fn_macro/src/: lib.rs
server_fn_macro_default/: Cargo.toml
src/: client.rs  error.rs  lib.rs
src/argument/: cbor.rs  json.rs  mod.rs  request.rs  url.rs
src/codec/: cbor.rs  json.rs  mod.rs  rkyv.rs  url.rs  url_json.rs
src/output/: ciborium.rs  mod.rs  serde_json.rs
src/request/: actix.rs  http.rs  mod.rs  request.rs
src/response/: actix.rs  browser.rs  http.rs  mod.rs  response.rs
