[package]
name = "server_fns"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", optional = true, features = ["derive"] }

## servers 
# actix 
actix-web = { version = "4", optional = true }
# axum
axum = { version = "0.6", optional = true }

## input encodings 
serde_qs = { version = "0.12", optional = true }

## output encodings 
# serde 
serde_json = { version = "1", optional = true }
futures = "0.3.29"
http = { version = "1.0.0", optional = true }
ciborium = { version="0.2.1", optional = true }
hyper = { version = "0.14", optional = true }
bytes = "1.5.0"
async-trait = "0.1.74"
thiserror = "1.0.50"

[features]
actix = ["dep:actix-web"]
axum = ["dep:axum", "dep:http", "dep:hyper"]
serde_json = ["dep:serde", "dep:serde_json"]
url = ["dep:serde", "dep:serde_qs"]
cbor = ["dep:ciborium", "dep:serde"]
request = ["dep:http"]
