[package]
name = "server_fns"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }

## servers 
# actix 
actix-web = { version = "4", optional = true }
# axum
axum = { version = "0.7", optional = true }

## input encodings 
serde_qs = { version = "0.12", optional = true }

## output encodings 
# serde 
serde_json = { version = "1", optional = true }
futures = "0.3"
http = { version = "1", optional = true }
ciborium = { version = "0.2", optional = true }
hyper = { version = "1", optional = true }
bytes = "1"
thiserror = "1"
http-body-util = { version = "0.1.0", optional = true }
rkyv = { version = "0.7", features = [
  "validation",
  "uuid",
  "strict",
], optional = true }
send_wrapper = { version = "0.6", features = ["futures"], optional = true }

[features]
actix = ["dep:actix-web", "dep:send_wrapper", "dep:http"]
axum = ["dep:axum", "dep:http", "dep:hyper", "dep:http-body-util"]
json = ["dep:serde_json"]
url = ["dep:serde_qs"]
cbor = ["dep:ciborium"]
rkyv = ["dep:rkyv"]
