[package]
name = "axum_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
dashmap = "5.5.3"
gloo-net = "0.5.0"
inventory = "0.3.13"
once_cell = "1.19.0"
serde = { version = "1.0.193", features = ["derive"] }
server_fns = { version = "0.1.0", path = "../..", features = [
	"axum",
	"json",
	"browser",
	"url",
] }
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
