[package]
name = "axum_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
gloo-net = "0.5.0"
inventory = "0.3.13"
serde = { version = "1.0.193", features = ["derive"] }
server_fns = { version = "0.1.0", path = "../../server_fn", features = [
	"axum",
	"json",
	"browser",
	"url",
] }
server_fn_macro_default = { version = "0.1.0", path = "../../server_fn_macro_default", features = [
	"ssr",
] }
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
